2007-09-09  Benjamin Kosnik  <bkoz@redhat.com>
	
	* testsuite/25_algorithms/binary_search.cc: Move...
	* testsuite/25_algorithms/binary_search/2.cc: ...here.

	* testsuite/25_algorithms/sort.cc: Move...	
	* testsuite/25_algorithms/sort/1.cc: ...here.
	* testsuite/25_algorithms/partial_sort_copy/2.cc: ...here.
	* testsuite/25_algorithms/nth_element/3.cc: ...here.
	* testsuite/25_algorithms/partial_sort/2.cc: ...here.
	* testsuite/25_algorithms/stable_sort/2.cc: ...here.

	* testsuite/25_algorithms/min_max.cc: Move...
	* testsuite/25_algorithms/min/1.cc: ...here.
	* testsuite/25_algorithms/min/2.cc: ...here.
	* testsuite/25_algorithms/max/1.cc: ...here.
	* testsuite/25_algorithms/max/2.cc: ...here.

2007-09-09  Joseph Myers  <joseph@codesourcery.com>

	* testsuite/lib/libstdc++.exp (v3-build-support): Specify output
	file for preprocessing.  Use remote_exec to call ar and ranlib.

2007-09-08  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/functional_hash.h: Add ext/numeric_traits.h.
	* include/tr1/functional_hash.h Same.
	* include/tr1/functional: Remove string, ext/type_traits.h includes.
	* include/tr1_impl/functional_hash.h: Move string, wstring
	definitions for std::<hash>::operator into separate file.
	* include/std/functional
	* src/hash.cc: New, move definitions here.
	* src/hash_c++0x.cc: Same.
	* src/Makefile.am: Add new source files.
	* configure: Regenerate.
	* Makefile.in: Same.
	* src/Makefile.in: Same.
	* po/Makefile.in: Same.
	* libmath/Makefile.in: Same.
	* libsupc++/Makefile.in: Same.
	* testsuite/Makefile.in: Same.
	* config/abi/pre/gnu.ver: Add symbols.
	* config/abi/pre/gnu-versioned-namespace.ver: Same, fix.
	
2007-09-07  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/19_diagnostics/error_category/cons/copy_neg.cc:
	Correct line number.

2007-09-07  Danny Smith  <dannysmith@users.sourceforge.net>

	PR libstdc++/33203
	* configure.host (error_constants_dir):  New variable,
	defaulting to os/generic.
	( mingw32*): Overide default.