@@ -1,3 +1,11 @@
+2007-09-09  Roger Sayle  <roger@eyesopen.com>
+
+	* acinclude.m4 (GLIBCXX_CHECK_SYSTEM_ERROR): Add ECANCELED for cygwin.
+	* configure: Regenerate.
+	* config/os/generic/error_constants.h: Guard.
+	* testsuite/19_diagnostics/headers/system_error/
+	types_std_c++0x.cc: Same.
+
 2007-09-09  Benjamin Kosnik  <bkoz@redhat.com>
 	
 	* testsuite/25_algorithms/binary_search.cc: Move...
